--- a/Resource/template/admin/confirm.twig
+++ b/Resource/template/admin/confirm.twig
@@ -120,7 +120,7 @@
                 <div class="row justify-content-between align-items-center">
                     <div class="col-6">
                         <div class="c-conversionArea__leftBlockItem">
-                            <a class="c-beseLink" href="{{ url('plugin_mail_magazine') }}"  onclick="changeAction('{{ url('plugin_mail_magazine_select') }}/{{id}}'); return false;">
+                            <a class="c-baseLink" href="{{ url('plugin_mail_magazine') }}"  onclick="changeAction('{{ url('plugin_mail_magazine_select') }}/{{id}}'); return false;">
                                 <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'mailmagazine.confirm.btn_back'|trans }}</span>
                             </a>
                         </div>
