--- a/Resource/template/admin/history_condition.twig
+++ b/Resource/template/admin/history_condition.twig
@@ -197,7 +197,7 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-6">
                     <div class="c-conversionArea__leftBlockItem">
-                        <a class="c-beseLink" href="{{ url('plugin_mail_magazine_history') }}">
+                        <a class="c-baseLink" href="{{ url('plugin_mail_magazine_history') }}">
                             <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'mailmagazine.history.preview.btn_back'|trans }}</span>
                         </a>
                     </div>
