--- a/Resource/template/admin/preview.twig
+++ b/Resource/template/admin/preview.twig
@@ -46,7 +46,7 @@
             <div class="row justify-content-between align-items-center">
                 <div class="col-6">
                     <div class="c-conversionArea__leftBlockItem">
-                        <a class="c-beseLink" href="{{ url('plugin_mail_magazine_template') }}">
+                        <a class="c-baseLink" href="{{ url('plugin_mail_magazine_template') }}">
                             <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'mailmagazine.template.preview.btn_back'|trans }}</span>
                         </a>
                     </div>
