--- a/Resource/template/admin/template_edit.twig
+++ b/Resource/template/admin/template_edit.twig
@@ -83,7 +83,7 @@
                 <div class="row justify-content-between align-items-center">
                     <div class="col-6">
                         <div class="c-conversionArea__leftBlockItem">
-                            <a class="c-beseLink" href="{{ url('plugin_mail_magazine_template') }}">
+                            <a class="c-baseLink" href="{{ url('plugin_mail_magazine_template') }}">
                                 <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'mailmagazine.template.title'|trans }}</span>
                             </a>
                         </div>
