--- a/Resource/template/admin/template_select.twig
+++ b/Resource/template/admin/template_select.twig
@@ -130,7 +130,7 @@
                 <div class="row justify-content-between align-items-center">
                     <div class="col-6">
                         <div class="c-conversionArea__leftBlockItem">
-                            <a class="c-beseLink" href="{{ url('plugin_mail_magazine') }}" onclick="changeAction('{{ url('plugin_mail_magazine') }}'); return false;">
+                            <a class="c-baseLink" href="{{ url('plugin_mail_magazine') }}" onclick="changeAction('{{ url('plugin_mail_magazine') }}'); return false;">
                                 <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'mailmagazine.select.btn_back'|trans }}</span>
                             </a>
                         </div>
