--- a/Resource/template/entry_add_mailmaga.twig
+++ b/Resource/template/entry_add_mailmaga.twig
@@ -35,9 +35,11 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                                 {{- choice.label|trans -}}
                             {% endif %}
                         {% endfor %}
+                        {{- form_widget(form, {type : 'hidden'}) -}}
+                    {% else %}
+                        {{- form_widget(form) -}}
+                        {{- form_errors(form) -}}
                     {% endif %}
-                    {{- form_widget(form) -}}
-                    {{- form_errors(form) -}}
                 </div>
             </div>
         </dd>
