--- a/Resource/template/admin/confirm.twig
+++ b/Resource/template/admin/confirm.twig
@@ -1,8 +1,8 @@
 {#
  This file is part of EC-CUBE
 
- Copyright(c) 2000-2015 LOCKON CO.,LTD. All Rights Reserved.
- http://www.lockon.co.jp/
+ Copyright(c) EC-CUBE CO.,LTD. All Rights Reserved.
+ https://www.ec-cube.co.jp/
 
  For the full copyright and license information, please view the LICENSE
  file that was distributed with this source code.
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div id="common_box" class="col-md-3">
             {# 配信するボタン #}
             <div class="col_inner" id="aside_column">
