--- a/Resource/template/admin/template_select.twig
+++ b/Resource/template/admin/template_select.twig
@@ -1,8 +1,8 @@
 {#
  This file is part of EC-CUBE
 
- Copyright(c) 2000-2015 LOCKON CO.,LTD. All Rights Reserved.
- http://www.lockon.co.jp/
+ Copyright(c) EC-CUBE CO.,LTD. All Rights Reserved.
+ https://www.ec-cube.co.jp/
 
  For the full copyright and license information, please view the LICENSE
  file that was distributed with this source code.
@@ -33,7 +33,7 @@
                 }
 
                 $('#mode').val('select');
-                
+
                 document.form1.action = action;
                 document.form1.submit();
             });
@@ -94,7 +94,7 @@
         </div>
     </div>
     </form>
-    
+
 
 
 
