ラベルの変数名を修正

--- a/Resource/template/admin/history_list.twig
+++ b/Resource/template/admin/history_list.twig
@@ -162,10 +162,10 @@ $(function () {
                                                                 </div>
                                                                 <div class="modal-footer">
                                                                     <button type="button" class="btn btn-ec-regular" data-dismiss="modal">
-                                                                        {{ 'common.label.cancel'|trans }}
+                                                                        {{ 'common.cancel'|trans }}
                                                                     </button>
                                                                     <button type="submit" class="btn btn-ec-delete" onclick="document.form1.action = '{{ url('plugin_mail_magazine_history_delete', { id: SendHistory.id }) }}'">
-                                                                        {{ 'common.label.execute'|trans }}
+                                                                        {{ 'common.delete'|trans }}
                                                                     </button>
                                                                 </div>
                                                             </div>
