--- a/Resource/template/admin/template_list.twig
+++ b/Resource/template/admin/template_list.twig
@@ -66,11 +66,11 @@
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-ec-regular" data-dismiss="modal">
-                                                            {{ 'common.label.cancel'|trans }}
+                                                            {{ 'common.cancel'|trans }}
                                                         </button>
                                                         <form action="{{ url('plugin_mail_magazine_template_delete', { id: Template.id }) }}" method="post" enctype="application/x-www-form-urlencoded">
                                                             <button type="submit" class="btn btn-ec-delete">
-                                                                {{ 'common.label.execute'|trans }}
+                                                                {{ 'common.delete'|trans }}
                                                             </button>
                                                         </form>
                                                     </div>
