--- a/Resource/template/admin/history_result.twig
+++ b/Resource/template/admin/history_result.twig
@@ -25,7 +25,7 @@
                                 <div class="col-8">
                                     <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
                                         <span class="card-title">
-                                            {{ 'mailmagazine.history.result.number_record'|trans }} <span class="normal"><strong>{{ pagination.totalItemCount }}</strong>
+                                            {{ 'mailmagazine.history.result.number_record'|trans }} <strong>{{ pagination.totalItemCount }}</strong>
                                         </span>
                                     </div>
                                 </div>
