配信履歴-配信結果画面でページャー設置と件数変更の不具合修正

--- a/Resource/template/admin/history_result.twig
+++ b/Resource/template/admin/history_result.twig
@@ -42,7 +42,7 @@
                                     <select class="custom-select" onchange="location = this.value;">
                                         {% for pageMax in pageMaxis %}
                                             <option {% if pageMax.name == page_count %} selected {% endif %}
-                                                    value="{{ path('admin_customer_page', {'page_no': 1, 'page_count': pageMax.name }) }}">
+                                                    value="{{ path('plugin_mail_magazine_history_result_page', {'id': historyId, 'page_no': 1, 'page_count': pageMax.name }) }}">
                                                 {{ 'admin.common.count'|trans({ '%count%': pageMax.name }) }}</option>
                                         {% endfor %}
                                     </select>
@@ -89,6 +89,11 @@
                                 {% endfor %}
                                 </tbody>
                             </table>
+                            <div class="row justify-content-md-center mb-4">
+                                {% if pagination.totalItemCount > 0 %}
+                                    {% include "@MailMagazine4/admin/history_result_pager.twig" with { 'pages' : pagination.paginationData, 'routes' : 'plugin_mail_magazine_history_result_page' } %}
+                                {% endif %}
+                            </div>
                         </div>
                     {% else %}
                         <div class="card-body mb-lg-5">
