--- a/Resource/template/admin/history_list.twig
+++ b/Resource/template/admin/history_list.twig
@@ -79,7 +79,7 @@ $(function () {
     <input type="hidden" name="_token" value="{{ csrf_token(constant('Eccube\\Common\\Constant::TOKEN_NAME')) }}">
     <div class="c-outsideBlock__contents mb-5">
         {% if pagination %}
-            <span class="font-weight-bold ml-2">{{ 'admin.mailmagazine.history.search_count'|trans({'%count%':pagination.totalItemCount}) }}</span>
+            <span class="fw-bold ml-2">{{ 'admin.mailmagazine.history.search_count'|trans({'%count%':pagination.totalItemCount}) }}</span>
         {% endif %}
     </div>
     <div class="c-contentsArea__cols">
@@ -89,10 +89,10 @@ $(function () {
                     <div class="row justify-content-between mb-2">
                         <div class="col-6"></div>
 
-                        <div class="col-5 text-right">
+                        <div class="col-5 text-end">
                             {#Dropdown page count#}
-                            <div class="d-inline-block mr-2">
-                                <select class="custom-select" onchange="location = this.value;">
+                            <div class="d-inline-block mr-2 align-bottom">
+                                <select class="form-select" onchange="location = this.value;">
                                     {% for pageMax in pageMaxis %}
                                         <option {% if pageMax.name == page_count %} selected {% endif %}
                                                 value="{{ path('plugin_mail_magazine_history_page', {'page_no': 1, 'page_count': pageMax.name }) }}">
