--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -115,7 +115,7 @@ function fnChangeActionSubmit(action) {
             <div class="row justify-content-start">
                 <div class="col-6">
                     <div class="mb-2">
-                        <label class="col-form-label">>{{ 'admin.customer.multi_search_label'|trans }}</label>
+                        <label class="col-form-label" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ 'tooltip.order.multi_search_label'|trans }}">>{{ 'admin.customer.multi_search_label'|trans }}<i class="fa fa-question-circle fa-lg ml-1"></i></label>
                         {{ form_widget(searchForm.multi) }}
                         {{ form_errors(searchForm.multi) }}
                     </div>
