--- a/Resource/template/admin/template_edit.twig
+++ b/Resource/template/admin/template_edit.twig
@@ -30,7 +30,7 @@
                                     {{ 'テンプレート編集'|trans }}
                                 </span>
                             </div>
-                            <div class="col-4 text-right">
+                            <div class="col-4 text-end">
                             </div>
                         </div>
                     </div>
