--- a/Resource/template/admin/template_list.twig
+++ b/Resource/template/admin/template_list.twig
@@ -33,7 +33,7 @@
                                     {{ 'mailmagazine.template.card_title'|trans }}
                                 </span>
                             </div>
-                            <div class="col-4 text-right">
+                            <div class="col-4 text-end">
                             </div>
                         </div>
                     </div>
