--- a/Resource/template/admin/confirm.twig
+++ b/Resource/template/admin/confirm.twig
@@ -82,7 +82,7 @@
                                     {{ 'mailmagazine.confirm.html'|trans }}
                                 </span>
                             </div>
-                            <div class="col-4 text-right">
+                            <div class="col-4 text-end">
                             </div>
                         </div>
                     </div>
@@ -165,8 +165,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-primary" id="sendTestMail">{{ 'mailmagazine.confirm.modal.btn_send'|trans }}</button>
-                    <button class="btn btn-default" data-bs-dismiss="modal">{{ 'mailmagazine.confirm.modal.btn_cancel'|trans }}</button>
+                    <button class="btn btn-ec-conversion" id="sendTestMail">{{ 'mailmagazine.confirm.modal.btn_send'|trans }}</button>
+                    <button class="btn btn-ec-sub" data-bs-dismiss="modal">{{ 'mailmagazine.confirm.modal.btn_cancel'|trans }}</button>
                 </div>
             </div>
         </div>
