--- a/Resource/template/admin/template_select.twig
+++ b/Resource/template/admin/template_select.twig
@@ -61,7 +61,7 @@
                                     {{ 'mailmagazine.select.card_title'|trans }}
                                 </span>
                             </div>
-                            <div class="col-4 text-right">
+                            <div class="col-4 text-end">
                             </div>
                         </div>
                     </div>
