Deprecated な html タグが使われていたので現行のものに置換する

--- a/Resource/template/admin/confirm.twig
+++ b/Resource/template/admin/confirm.twig
@@ -96,11 +96,11 @@
                                     </tr>
                                     <tr>
                                         <th>{{ 'mailmagazine.select.label_body'|trans }}</th>
-                                        <td><xmp>{{ body_itm }}</xmp></td>
+                                        <td><pre>{{ body_itm }}</pre></td>
                                     </tr>
                                     <tr>
                                         <th>{{ 'mailmagazine.select.label_body_html'|trans }}</th>
-                                        <td><xmp>{{ htmlBody_itm|raw }}</xmp></td>
+                                        <td><pre>{{ htmlBody_itm|raw }}</pre></td>
                                     </tr>
                                 </tbody>
                             </table>
