--- a/Resource/template/admin/history_preview.twig
+++ b/Resource/template/admin/history_preview.twig
@@ -26,11 +26,11 @@
                 </tr>
                 <tr>
                     <th>{{ 'mailmagazine.select.label_body'|trans }}</th>
-                    <td><xmp>{{ history.body }}</xmp></td>
+                    <td><pre>{{ history.body }}</pre></td>
                 </tr>
                 <tr>
                     <th>{{ 'mailmagazine.select.label_body_html'|trans }}</th>
-                    <td><xmp>{{ history.htmlBody|raw }}</xmp></td>
+                    <td><pre>{{ history.htmlBody|raw }}</pre></td>
                 </tr>
                 </tbody>
             </table>
