--- a/Resource/template/admin/preview.twig
+++ b/Resource/template/admin/preview.twig
@@ -28,11 +28,11 @@
                             </tr>
                             <tr>
                                 <th class="w-25">{{ 'mailmagazine.select.label_body'|trans }}</th>
-                                <td><xmp>{{ Template.body }}</xmp></td>
+                                <td><pre>{{ Template.body }}</pre></td>
                             </tr>
                             <tr>
                                 <th class="w-25">{{ 'mailmagazine.select.label_body_html'|trans }}</th>
-                                <td><xmp>{{ Template.htmlBody|raw }}</xmp></td>
+                                <td><pre>{{ Template.htmlBody|raw }}</pre></td>
                             </tr>
                             </tbody>
                         </table>
