--- a/Resource/template/admin/history_preview.twig
+++ b/Resource/template/admin/history_preview.twig
@@ -30,7 +30,7 @@
                 </tr>
                 <tr>
                     <th>{{ 'mailmagazine.select.label_body_html'|trans }}</th>
-                    <td><pre>{{ history.htmlBody|raw }}</pre></td>
+                    <td><pre>{{ history.htmlBody|raw|purify }}</pre></td>
                 </tr>
                 </tbody>
             </table>
