--- a/Resource/template/admin/template_edit.twig
+++ b/Resource/template/admin/template_edit.twig
@@ -37,7 +37,7 @@
                     <div class="card-body mb-lg-5">
                         <div class="row">
                             <div class="col-3">
-                                <span>{{ form.subject.vars.label|trans }}</span>
+                                {{ form.subject.vars.label|trans }}<span class="badge bg-primary ms-1">{{ 'admin.common.required'|trans }}</span>
                             </div>
                             <div class="col mb-2">
                                 {{ form_widget(form.subject) }}
@@ -46,7 +46,7 @@
                         </div>
                         <div class="row">
                             <div class="col-3">
-                                <span>{{ form.body.vars.label|trans }}</span>
+                                {{ form.body.vars.label|trans }}<span class="badge bg-primary ms-1">{{ 'admin.common.required'|trans }}</span>
                             </div>
                             <div class="col mb-2">
                                 {{ form_widget(form.body, {'attr' : { 'rows' : 20 }}) }}
