--- a/Resource/template/admin/template_list.twig
+++ b/Resource/template/admin/template_list.twig
@@ -90,7 +90,7 @@
                 </div>
                 <div class="row justify-content-md-center mb-4 ">
                     <div class="col-auto">
-                        <a class="btn btn-ec-regular btn-lg" href="{{ url('plugin_mail_magazine_template_regist') }}">
+                        <a class="btn btn-ec-regular ps-4 pe-4" href="{{ url('plugin_mail_magazine_template_regist') }}">
                             {{ 'mailmagazine.template.btn_new'|trans }}
                         </a>
                     </div>
