--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -308,7 +308,10 @@ function fnChangeActionSubmit(action) {
                                 </select>
                             </div>
                             <div class="d-inline-block">
-                                <div class="btn-group" role="group"></div>
+                                <div class="btn-group" role="group">
+                                    <a class="btn btn-ec-regular" href="{{ url('plugin_mail_magazine_export') }}"><i class="fa fa-cloud-download me-1 text-secondary"></i><span>{{ 'admin.common.csv_download'|trans }}</span></a>
+                                    <a class="btn btn-ec-regular" href="{{ url('admin_setting_shop_csv', { id : constant('\\Eccube\\Entity\\Master\\CsvType::CSV_TYPE_CUSTOMER') }) }}"><i class="fa fa-cog me-1 text-secondary"></i><span>{{ 'admin.setting.shop.csv_setting'|trans }}</span></a>
+                                </div>
                             </div>
                         </div>
                     </div>
